<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpFragment"
    android:background="@color/ffd9c0">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_26dp"
        android:layout_marginTop="@dimen/_40dp"
        android:layout_marginEnd="@dimen/_26dp"
        android:background="@color/ffd9c0"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/full_name"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_16dp"
            android:hint="@string/username"
            android:inputType="text"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_16dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_confirmpass"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40dp"
            android:layout_marginTop="@dimen/_16dp"
            android:autofillHints="@string/prompt_password"
            android:hint="@string/confirm_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:background="@color/myColor"
            android:text="@string/already_have_an_account_sign_in"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/sign_up" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>